Updated training-with-me. Fixed vertical alignment for text logo

--- a/css/main.sass
+++ b/css/main.sass
@@ -88,19 +88,15 @@ body
     // text-indent: -9999px
     border: 1px solid #ADA7A7
     background-color: #fff
+    display: table
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
     -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3)
     box-shadow: 0 1px 1px rgba(0,0,0,0.3)
-    -webkit-transform-style: preserve-3d
-    -moz-transform-style: preserve-3d
-    transform-style: preserve-3d
   .blog-logo-text
     text-align: center
-    display: block
+    display: table-cell
     vertical-align: middle
     position: relative
-    top: 50%
-    transform: translateY(-50%)
     font-size: 35px
   .blog-title
     margin: 0
